# cpp-socket-programming

./: .gitignore  README.md
client/: CMakeLists.txt
client/src/: main.cpp
server/: CMakeLists.txt  script.sh
server/src/: main.cpp
v1/client/: CMakeLists.txt  script.sh
v1/client/src/: main.cpp
v1/server/: CMakeLists.txt
v1/server/src/: main.cpp
v2/: CMakeLists.txt  script.sh
v2/lib/: CMakeLists.txt
v2/lib/implementation/: ClientImpl.cpp  NetworkImpl.cpp  ServerImpl.cpp  UtilImpl.cpp
v2/lib/include/: IClient.h  INetwork.h  IServer.h  IUtil.h
v2/main/: MainClient.cpp  MainServer.cpp
